--- a/color-manipulation/index.html
+++ b/color-manipulation/index.html
@@ -9,6 +9,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
+            height: 100vh;
         }
         .container{
             margin-top: 3%;
