--- a/dinamis-input-manipulation/index.html
+++ b/dinamis-input-manipulation/index.html
@@ -11,18 +11,25 @@
             min-width: 10px;
             min-height: 10px;
             border: 1px solid black;
+            background-color: gray;
+            color: white;
+        }
+        #target-text{
+            z-index: 3;
         }
     </style>
     <title>Dinamis input</title>
 </head>
 <body>
-    <form action="">
+    
     <div class="container mt-5">
         <div class="row mt-3 justify-content-center ">
             <div class="target text-center" id="target">
-                <p>
-                    ubah sesuai keinginan
-                </p>
+                <div>
+                    <p id="target-text">
+                        ubah sesuai keinginan
+                    </p>
+                </div>
             </div>
         </div>
       
@@ -48,7 +55,7 @@
             </div>
         </div>
     </div>
-</form>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="script.js"></script>
