--- a/slider/slider.html
+++ b/slider/slider.html
@@ -26,8 +26,8 @@
             overflow: hidden;
         }
         .slider-container{
-            max-width: 100vw;
-            width: 50%;
+            max-width: calc(100vw - 150px);
+            width: 60%;
             position: relative;
         }
         .slider .card{
@@ -64,6 +64,7 @@
 
         .card > .card.content{
             padding: 10px;
+            color: aquamarine;
         }
 
         .prev, .next{
@@ -77,6 +78,7 @@
             border-radius: 50%;
             text-align: center;
             z-index: 99;
+            color: salmon;
         
 
         }
@@ -87,6 +89,11 @@
             right: -50px;
         }
 
+        @media screen and (max-width: 1000px) {
+            .slider-container{
+                width: 100%;
+            }
+        }
         @media screen and (max-width: 900px) {
             .slider-container .slider{
                 grid-auto-columns: calc((100% / 2) - 9px);
