describe ui sisa 1 part

--- a/tr.html
+++ b/tr.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-
+    <input type="text" name="search" placeholder="search" id="search">
+    <ul></ul>
     <script src="tr.js"></script>
 </body>
 </html>
